--- a/index.html
+++ b/index.html
@@ -530,77 +530,151 @@
     </section><!-- /Faq Section -->
 
     <!-- Gallery Section -->
+
     <section id="gallery" class="gallery section">
 
-      <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Gallery</h2>
-        <!-- <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p> -->
-      </div><!-- End Section Title -->
-  <div class="container my-5">
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
-      <div class="col">
-        <div class="gallery-item shadow-sm">
-          <img src="assets/img/gallery/g-1.webp" class="img-fluid" alt="Gallery Image 1">
+      </div><div class="container my-5">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4" id="gallery-grid">
+          <div class="col">
+            <div class="gallery-item shadow-sm" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-slide-to="0">
+              <img src="assets/img/gallery/g-1.webp" class="img-fluid" alt="Gallery Image 1">
+            </div>
+          </div>
+          <div class="col">
+            <div class="gallery-item shadow-sm" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-slide-to="1">
+              <img src="assets/img/gallery/g-2.webp" class="img-fluid" alt="Gallery Image 2">
+            </div>
+          </div>
+          <div class="col">
+            <div class="gallery-item shadow-sm" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-slide-to="2">
+              <img src="assets/img/gallery/g-3.webp" class="img-fluid" alt="Gallery Image 3">
+            </div>
+          </div>
+          <div class="col">
+            <div class="gallery-item shadow-sm" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-slide-to="3">
+              <img src="assets/img/gallery/g-4.webp" class="img-fluid" alt="Gallery Image 4">
+            </div>
+          </div>
+          <div class="col">
+            <div class="gallery-item shadow-sm" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-slide-to="4">
+              <img src="assets/img/gallery/g-5.webp" class="img-fluid" alt="Gallery Image 5">
+            </div>
+          </div>
+          <div class="col">
+            <div class="gallery-item shadow-sm" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-slide-to="5">
+              <img src="assets/img/gallery/g-6.webp" class="img-fluid" alt="Gallery Image 6">
+            </div>
+          </div>
+          <div class="col">
+            <div class="gallery-item shadow-sm" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-slide-to="6">
+              <img src="assets/img/gallery/g-7.webp" class="img-fluid" alt="Gallery Image 7">
+            </div>
+          </div>
+          <div class="col">
+            <div class="gallery-item shadow-sm" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-slide-to="7">
+              <img src="assets/img/gallery/g-8.webp" class="img-fluid" alt="Gallery Image 8">
+            </div>
+          </div>
+          <div class="col">
+            <div class="gallery-item shadow-sm" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-slide-to="8">
+              <img src="assets/img/gallery/g-9.webp" class="img-fluid" alt="Gallery Image 9">
+            </div>
+          </div>
+          <div class="col">
+            <div class="gallery-item shadow-sm" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-slide-to="9">
+              <img src="assets/img/gallery/g-10.webp" class="img-fluid" alt="Gallery Image 10">
+            </div>
+          </div>
+          <div class="col">
+            <div class="gallery-item shadow-sm" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-slide-to="10">
+              <img src="assets/img/gallery/g-11.webp" class="img-fluid" alt="Gallery Image 11">
+            </div>
+          </div>
+          <div class="col">
+            <div class="gallery-item shadow-sm" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-slide-to="11">
+              <img src="assets/img/gallery/g-12.webp" class="img-fluid" alt="Gallery Image 12">
+            </div>
+          </div>
         </div>
       </div>
-      <div class="col">
-        <div class="gallery-item shadow-sm">
-          <img src="assets/img/gallery/g-2.webp" class="img-fluid" alt="Gallery Image 2">
-        </div>
-      </div>
-      <div class="col">
-        <div class="gallery-item shadow-sm">
-          <img src="assets/img/gallery/g-3.webp" class="img-fluid" alt="Gallery Image 3">
-        </div>
-      </div>
-      <div class="col">
-        <div class="gallery-item shadow-sm">
-          <img src="assets/img/gallery/g-4.webp" class="img-fluid" alt="Gallery Image 4">
-        </div>
-      </div>
-<div class="col">
-  <div class="gallery-item shadow-sm">
-    <img src="assets/img/gallery/g-5.webp" class="img-fluid" alt="Gallery Image 5">
-  </div>
-</div>
-<div class="col">
-  <div class="gallery-item shadow-sm">
-    <img src="assets/img/gallery/g-6.webp" class="img-fluid" alt="Gallery Image 6">
-  </div>
-</div>
-<div class="col">
-  <div class="gallery-item shadow-sm">
-    <img src="assets/img/gallery/g-7.webp" class="img-fluid" alt="Gallery Image 7">
-  </div>
-</div>
-<div class="col">
-  <div class="gallery-item shadow-sm">
-    <img src="assets/img/gallery/g-8.webp" class="img-fluid" alt="Gallery Image 8">
-  </div>
-</div>
-<div class="col">
-  <div class="gallery-item shadow-sm">
-    <img src="assets/img/gallery/g-9.webp" class="img-fluid" alt="Gallery Image 9">
-  </div>
-</div>
-<div class="col">
-  <div class="gallery-item shadow-sm">
-    <img src="assets/img/gallery/g-10.webp" class="img-fluid" alt="Gallery Image 10">
-  </div>
-</div>
-<div class="col">
-  <div class="gallery-item shadow-sm">
-    <img src="assets/img/gallery/g-11.webp" class="img-fluid" alt="Gallery Image 11">
-  </div>
-</div>
-<div class="col">
-  <div class="gallery-item shadow-sm">
-    <img src="assets/img/gallery/g-12.webp" class="img-fluid" alt="Gallery Image 12">
-  </div>
-</div>
+    </section>
+    
+    <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-md modal-dialog-centered">
+        <div class="modal-content bg-transparent border-0">
+          <div class="modal-body p-0">
+            <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="assets/img/gallery/g-1.webp" class="d-block w-100" alt="Gallery Image 1">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/img/gallery/g-2.webp" class="d-block w-100" alt="Gallery Image 2">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/img/gallery/g-3.webp" class="d-block w-100" alt="Gallery Image 3">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/img/gallery/g-4.webp" class="d-block w-100" alt="Gallery Image 4">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/img/gallery/g-5.webp" class="d-block w-100" alt="Gallery Image 5">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/img/gallery/g-6.webp" class="d-block w-100" alt="Gallery Image 6">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/img/gallery/g-7.webp" class="d-block w-100" alt="Gallery Image 7">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/img/gallery/g-8.webp" class="d-block w-100" alt="Gallery Image 8">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/img/gallery/g-9.webp" class="d-block w-100" alt="Gallery Image 9">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/img/gallery/g-10.webp" class="d-block w-100" alt="Gallery Image 10">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/img/gallery/g-11.webp" class="d-block w-100" alt="Gallery Image 11">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/img/gallery/g-12.webp" class="d-block w-100" alt="Gallery Image 12">
+                </div>
+              </div>
 
-      <!-- /Gallery Section -->
+              <button class="carousel-control-prev" type="button" data-bs-target="#imageCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#imageCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script>
+  document.addEventListener('keydown', function(event) {
+    const carouselElement = document.getElementById('imageCarousel');
+    const carouselInstance = bootstrap.Carousel.getInstance(carouselElement);
+
+    if (carouselInstance) {
+      if (event.key === 'ArrowLeft') {
+        carouselInstance.prev();
+      } else if (event.key === 'ArrowRight') {
+        carouselInstance.next();
+      }
+    }
+  });
+</script>
+
+    <!-- Gallery Section -->
 
   </main>
 
