--- a/blog.html
+++ b/blog.html
@@ -61,9 +61,17 @@
             <nav>
                 <ul>
                     <li class="mb-4">
-                        <a href="#/" class="flex items-center p-3 rounded-lg text-gray-300 hover:bg-gray-700 transition-colors">
+                        <a href="index.html" class="flex items-center p-3 rounded-lg text-gray-300 hover:bg-gray-700 transition-colors">
                             <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path></svg>
                             Home
+                        </a>
+                    </li>
+                    <li class="mb-4">
+                        <a href="#/" class="flex items-center p-3 rounded-lg text-gray-300 hover:bg-gray-700 transition-colors">
+                            <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"></path>
+</svg>
+                            Posts
                         </a>
                     </li>
                     <li class="mb-4">
@@ -285,7 +293,7 @@
             }
 
             contentContainer.innerHTML = postsHtml;
-            document.getElementById('page-title').innerText = 'Home';
+            document.getElementById('page-title').innerText = 'Posts';
         }
 
         // Function to render a single blog post
