--- a/elderly-n.html
+++ b/elderly-n.html
@@ -320,15 +320,27 @@
       <h4>Contact Us</h4>
       <div class="footer-contact">
         <p>Available from 09 AM to 09 PM IST</p>
-        <p><strong>Phone:</strong> <span>+91 80766 42570</span></p>
-
+        <p><strong>Phone</strong> <span>+91 80766 42570</span></p>
         <p><strong>Email:</strong> <span>info@dietance.com</span></p>
       </div>
-      <div class="social-links d-flex mt-4">
-        <a href="https://www.facebook.com/dietance/" target="_blank"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/dietance.india/" target="_blank"><i class="bi bi-instagram"></i></a>
-        <a href="/blog"><i class="bi bi-file-text"></i></a>
-      </div>
+<div class="social-links d-flex mt-4">
+  <a href="https://www.facebook.com/dietance/" 
+     target="_blank" 
+     rel="noopener noreferrer" 
+     aria-label="Facebook">
+    <i class="bi bi-facebook"></i>
+  </a>
+  <a href="https://www.instagram.com/dietance.india/" 
+     target="_blank" 
+     rel="noopener noreferrer" 
+     aria-label="Instagram">
+    <i class="bi bi-instagram"></i>
+  </a>
+  <a href="blog.html" 
+     aria-label="Blog">
+    <i class="bi bi-file-text"></i>
+  </a>
+</div>
     </div>
 
     <!-- The third column contains 'Useful Links' and is now a 3-column width -->
@@ -378,7 +390,7 @@
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+  
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
