--- a/tos.html
+++ b/tos.html
@@ -87,6 +87,9 @@
             Please note that due to the processing time required by our payment gateway, we do not receive funds on
             the same day a purchase is made.
         </p>
+        <p>
+            Applicable taxes, including GST/IGST/CGST/SGST, will be charged in addition to the listed prices.
+        </p>
 
         <h3>3. Refund Policy</h3>
         <p>
@@ -120,7 +123,7 @@
 
         <h3>7. Contact Us</h3>
         <p>
-            If you have any questions about these Terms, please contact us at **[Your Contact Email Address]**.
+            If you have any questions, please contact us at <a href="mailto:info@dietance.com">info@dietance.com</a>.
         </p>
     </div>
 
