--- a/tos.html
+++ b/tos.html
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
             background-color: #f8f9fa;
+            font-family: Arial, sans-serif;
         }
 
         .container {
@@ -17,19 +17,25 @@
             margin-top: 50px;
             margin-bottom: 50px;
             padding: 30px;
-            background-color: #fff;
+            background-color: #F8F5EE;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
         h1,
+        h3,
+        p,
+        a,
+        .text-muted {
+            color: #3A3026;
+        }
+
+        h1,
         h3 {
-            color: #212529;
             font-weight: bold;
         }
 
         p {
-            color: #495057;
             line-height: 1.6;
         }
 
@@ -38,29 +44,33 @@
             border-top: 1px solid rgba(0, 0, 0, 0.1);
         }
 
-        .back-button-container {
-            margin-bottom: 20px;
+        .header-with-button {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px; /* Adjust as needed */
         }
 
         .btn-primary {
-            background-color: #007bff;
-            border-color: #007bff;
+            background-color: #D2B48C;
+            border-color: #D2B48C;
+            color: #3A3026;
         }
 
         .btn-primary:hover {
-            background-color: #0056b3;
-            border-color: #004085;
+            background-color: #C3A580;
+            border-color: #C3A580;
+            color: #3A3026;
         }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <div class="back-button-container">
+        <div class="header-with-button">
+            <h1 class="mb-0">Terms of Service for Dietance.com</h1>
             <a href="index.html" class="btn btn-primary">&larr; Back to Home</a>
         </div>
-
-        <h1 class="text-center mb-4">Terms of Service for Dietance.com</h1>
         <hr>
 
         <p class="text-muted text-center">
